--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,16 +2,20 @@
 
 <h1>HOME</h1>
 <p> <%= content1 %> </p>
-
- <!-- <% console.log(posts); %> -->
     
  <% posts.forEach(function(post) {   %>
   <h1> <%= post.title %> </h1>
   <p>
-       <%= post.body.substring(0, 150) +"....." %> 
-       <a href="/posts/<%=post.title%>">Read More</a>
+    <% if (typeof post.content == 'undefined' ) { %>
+      <p> NO CONTENT </p>
+     <% } else { %>
+     <%=post.content.substring(0, 100) + "...." %> 
+     <%  } %>
+       <a href="/posts/<%=post._id%>">Read More</a>
 </p>
   <% })  %>
   
 
 <%- include('partials/footer'); -%>
+
+
