Updated files after adding data base

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,12 +15,18 @@
     color: #1abc9c !important;
 }
 
+.composebtn {
+    position: absolute;
+    right:5px;
+    top:20px;
+}
+
 .footer-padding {
 	padding-bottom: 60px;
 }
 
 .footer {
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
