--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,8 +18,12 @@
           <li id="about"><a href="/about">ABOUT US</a></li>
           <li id="contact"><a href="/contact">CONTACT US</a></li>
         </ul>
+
     </div>
+    <a href="/compose" class="btn btn-info composebtn" role="button">compose</a>
   </nav>
 
   <body>
     <div class="container">
+
+      
